--- a/app/src/main/res/layout/activity_credit_view.xml
+++ b/app/src/main/res/layout/activity_credit_view.xml
@@ -44,12 +44,21 @@
         android:layout_height="match_parent"
         >
 
-        <LinearLayout
+        <github.leelion96.piechartview.View.PieView
+            android:id="@+id/pieView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="300dp"
+            android:background="@android:color/white" />
 
-        </LinearLayout>
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:gravity="center"
+            android:text="1등급"
+            android:textSize="40dp"
+            android:textStyle="bold"/>
+
 
     </ScrollView>
 
