--- a/app/src/main/res/layout/activity_credit_view.xml
+++ b/app/src/main/res/layout/activity_credit_view.xml
@@ -63,4 +63,43 @@
 
     </FrameLayout>
 
+    <LinearLayout
+        android:id="@+id/linear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/content">
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <Button
+        android:id="@+id/detailbutton"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:text="자세히"
+        android:textSize="10dp"
+        android:textColor="@android:color/white"
+        android:background="@drawable/round_swquare_background_thumb" />
+    </LinearLayout>
+    <FrameLayout
+        android:id="@+id/stacakedbarchart"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linear"
+        android:layout_marginTop="40dp">
+
+        <org.eazegraph.lib.charts.StackedBarChart
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/stackedbarchart"
+            android:layout_width="match_parent"
+            android:layout_height="256dp"
+            android:padding="10dp"
+            app:egFixedBarWidth="true"
+            app:egBarWidth="20dp"
+            app:egLegendHeight="40dp"/>
+
+    </FrameLayout>
 </RelativeLayout>
