--- a/app/src/main/res/layout/fragment_current_finance.xml
+++ b/app/src/main/res/layout/fragment_current_finance.xml
@@ -7,22 +7,8 @@
     android:layout_height="match_parent"
     >
 
-    <TextView
-        android:id="@+id/section_label2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="ViewPager Example"
-        />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/list"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
