--- a/app/src/main/res/layout/item_detail_credit_check.xml
+++ b/app/src/main/res/layout/item_detail_credit_check.xml
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:weightSum="5.2"
-        android:background="#FFA2A2">
-
+        android:background="#FFC6C6">
 
         <LinearLayout
             android:orientation="horizontal"
