--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,7 +15,7 @@
         <item
             android:id="@+id/nav_monitor"
             android:icon="@drawable/icon_property"
-            android:title="@string/menu_data_monitoring" />
+            android:title="@string/menu_monitor" />
         <item
             android:id="@+id/nav_notice"
             android:icon="@drawable/icon_property"
