--- a/app/src/main/res/layout/item_trade_list.xml
+++ b/app/src/main/res/layout/item_trade_list.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="거래명"
-        android:textSize="17sp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"/>
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:layout_marginBottom="5dp"/>
     <TextView
         android:id="@+id/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="소재지"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="5dp"/>
+        android:text="소재지"/>
 
 </LinearLayout>
